problema boton reset arreglado, a espera de win banner

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <header><h1>HANGMAN</h1><h1>VANILLA JAVASCRIPT HANDMAN GAME</h1>
-    <p>Use the alphabet below to guess the word, or click hint to get a clue</p>
+    <p>Use the alphabet below to guess the word</p>
     <div id="lang">
         <button lang="en" id="en" class="idioma">English</button>
     <button lang="руc" id="rus" class="idioma">Русский</button>
@@ -99,9 +99,9 @@
 
             <div id="adivina">
             </div>
-            <div>Tienes <span id="vidas">10</span> vidas</div>
+            <div>You have <span id="vidas">10</span> lives left</div>
             <div id="fin">
-                <button id="retry">Reiniciar</button>
+                <button class="retry" id="retry">Reset</button>
             </div>
     </main>
 </body>
