--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </style>
 </head>
 <body>
-    <header><h1>HANGMAN</h1><h1>VANILLA JAVASCRIPT HANDMAN GAME</h1>
+    <header><h1>HANGMAN</h1><h1>VANILLA JAVASCRIPT HANGMAN GAME</h1>
     <p>Use the alphabet below to guess the word</p>
     <div id="lang">
         <button lang="en" id="en" class="idioma">English</button>
